--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
     "bootstrap": "3.3.6",
     "jquery": "2.2.1",
     "lodash": "4.5.1"
+  },
+  "devDependencies": {
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.0",
+    "gulp-messenger": "0.12.0",
+    "gulp-notify": "2.2.0",
+    "gulp-uglify": "1.5.3",
+    "moment": "2.11.2",
+    "require-dir": "0.3.0",
+    "run-sequence": "1.1.5"
   }
 }
