--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "gulp": "3.9.1",
+    "gulp-clean-css": "2.0.2",
     "gulp-concat": "2.6.0",
+    "gulp-less": "3.0.5",
     "gulp-messenger": "0.12.0",
     "gulp-notify": "2.2.0",
     "gulp-uglify": "1.5.3",
