--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "lodash": "4.5.1"
   },
   "devDependencies": {
+    "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-clean-css": "2.0.2",
     "gulp-concat": "2.6.0",
+    "gulp-eslint": "2.0.0",
     "gulp-less": "3.0.5",
     "gulp-messenger": "0.12.0",
     "gulp-notify": "2.2.0",
+    "gulp-strip-debug": "1.1.0",
     "gulp-uglify": "1.5.3",
     "moment": "2.11.2",
     "require-dir": "0.3.0",
-    "run-sequence": "1.1.5"
+    "run-sequence": "1.1.5",
+    "yargs-parser": "2.1.1"
   }
 }
